<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pink_card"
        android:textSize="@dimen/dimen_24sp"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_margin="@dimen/dimen_18dp"
        app:cardElevation="@dimen/dimen_16dp"
        app:cardBackgroundColor="@color/card_pink"
        app:cardCornerRadius="@dimen/dimen_16dp"

        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:elevation="@dimen/dimen_16dp"
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/sos"
        android:textColor="#fff"
        android:textSize="@dimen/dimen_26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        android:elevation="@dimen/dimen_16dp"
        android:layout_width="@dimen/dimen_0sp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/img_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />

    <ImageView
        android:id="@+id/img_sos"
        android:elevation="@dimen/dimen_16dp"
        android:layout_width="@dimen/dimen_96dp"
        android:layout_height="@dimen/dimen_0dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        android:layout_margin="@dimen/dimen_16dp"/>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16dp"
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_margin="@dimen/dimen_18dp"
        app:cardBackgroundColor="@color/card_green"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card" />


    <TextView
        android:elevation="@dimen/dimen_16dp"
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/guard"
        android:textColor="#fff"
        android:textSize="@dimen/dimen_26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />
    <TextView
        android:elevation="@dimen/dimen_16dp"
        android:id="@+id/guard_msg"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/img_guard"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />
    <ImageView
        android:elevation="@dimen/dimen_16dp"
        android:id="@+id/img_guard"
        android:layout_width="@dimen/dimen_96dp"
        android:layout_height="@dimen/dimen_0dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        android:layout_margin="@dimen/dimen_16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>